<resources>
    <string name="app_name">TourLogAndroid</string>
    <string name="title_map">Map</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_camera">Camera</string>
    <string name="title_settings">Settings</string>
    <string name="capture_image">Capture Image</string>
    <string name="camerafeed">CameraFeed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>