<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.tourlogandroid.ui.mapPage.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.example.tourlogandroid.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.tourlogandroid.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.tourlogandroid.ui.camera.CameraFragment"
        android:label="@string/title_camera" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.tourlogandroid.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

</navigation>